# thecopperspoon

./: .firebaserc  .gitignore  CLAUDE.md  README.md  Start-Server.bat  firebase.json  iii-config.yaml  main.py  n8n_workflow.json  pyproject.toml  requirements.txt  sync_firestore.py  test2.py  test3.py  web.py
.github/: copilot-instructions.md
data/: menu.json
functions/: package-lock.json  package.json  tsconfig.json
functions/lib/: index.js  index.js.map
functions/src/: index.ts
scratch/: inject_ollama.py  ollama_ctx_test.py  ollama_ctx_test2.py  ollama_sync_test.py  ollama_test.py  test_agent_direct.py  test_n8n.py  verify_phone.py
src/restaurant_agent/: __init__.py  agent.py  auth.py  cli.py  client.py  config.py  feedback.py  menu.py  orders.py  persona.py  reservations.py  tz_langchain_tools.py  utils.py  web.py  webhooks.py
src/restaurant_agent/static/: app.css  app.js  manifest.json  sw.js
src/restaurant_agent/templates/: about.html  admin.html  base.html  cart.html  feedback.html  home.html  index.html  menu.html  reservations.html
tests/: _support.py  test_agent.py  test_client.py  test_menu.py  test_persona.py  test_reservations.py  test_web.py
